--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,10 +2,11 @@
 <resources>
     <color name="colorPrimary">#424242</color>
     <color name="colorPrimaryDark">#1b1b1b</color>
-    <color name="colorAccent">#4fc3f7</color>
+    <color name="colorAccent">#00B0FE</color>
 
     <color name="colorGreen">#4CAF50</color>
     <color name="colorYellow">#FFC107</color>
     <color name="colorGrayLight">#ededed</color>
+    <color name="colorText">#757575</color>
 
 </resources>
