--- a/app/src/main/res/layout/activity_confirm_email.xml
+++ b/app/src/main/res/layout/activity_confirm_email.xml
@@ -24,7 +24,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="8dp"
-        android:text="Enviamos um link de confirmação para seu email\nPor favor, confirme seu email.\nCaso o email de confirmação não esteja na caixa de entrada, procura nos spans."
+        android:text="@string/valid_email_msg"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,7 +39,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/corner_button_blue"
-        android:text="Reenviar ou Checar"
+        android:text="@string/resend_check"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,14 +49,15 @@
         android:id="@+id/tvTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Validação de Conta"
+        android:text="@string/valid_acc"
+        android:textAlignment="center"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/tvMsg"
+        app:layout_constraintBottom_toTopOf="@+id/tvEmail"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ProgressBar
@@ -68,5 +69,32 @@
         app:layout_constraintEnd_toEndOf="@+id/btnResend"
         app:layout_constraintStart_toStartOf="@+id/btnResend"
         app:layout_constraintTop_toTopOf="@+id/btnResend" />
+
+    <TextView
+        android:id="@+id/tvEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/email_registered"
+        app:layout_constraintBottom_toTopOf="@+id/tvMsg"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnIncorrectEmail"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:textColor="@color/colorText"
+        android:layout_marginEnd="8dp"
+        android:text="@string/my_email_incorrect"
+        android:textAllCaps="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnResend" />
 
 </android.support.constraint.ConstraintLayout>
