--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:title="@string/logout"
+        android:id="@+id/nav_about"
+        android:title="@string/about"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/nav_logout"
-        app:showAsAction="never"/>
+        android:title="@string/logout"
+        app:showAsAction="never" />
 
 </menu>
