--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,6 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/nav_profile"
+        android:title="@string/profile"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/nav_about"
         android:title="@string/about"
         app:showAsAction="never" />
