--- a/app/src/main/res/layout/activity_lawyer_profile.xml
+++ b/app/src/main/res/layout/activity_lawyer_profile.xml
@@ -248,7 +248,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/lvPhone"
+                    android:id="@+id/lvOab"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
@@ -282,6 +282,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/lvPhone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
