--- a/app/src/main/res/layout/fragment_lawyer.xml
+++ b/app/src/main/res/layout/fragment_lawyer.xml
@@ -287,6 +287,7 @@
                             android:foreground="?android:attr/selectableItemBackground">
 
                             <LinearLayout
+                                android:id="@+id/cvProfile"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:gravity="center"
@@ -297,15 +298,14 @@
                                     android:layout_height="64dp"
                                     android:background="@drawable/circle"
                                     android:padding="10dp"
-                                    android:src="@drawable/ic_account_balance_white_24dp" />
-
+                                    android:src="@drawable/avatar" />
 
                                 <TextView
                                     android:id="@+id/tvNotCategory"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="10dp"
-                                    android:text="Title"
+                                    android:text="@string/profile"
                                     android:textStyle="bold" />
 
                                 <View
@@ -320,7 +320,7 @@
                                     android:layout_height="wrap_content"
                                     android:gravity="center"
                                     android:padding="5dp"
-                                    android:text="Description"
+                                    android:text="@string/profile_msg"
                                     android:textColor="@android:color/darker_gray" />
 
                             </LinearLayout>
