--- a/app/src/main/res/layout/activity_name_register.xml
+++ b/app/src/main/res/layout/activity_name_register.xml
@@ -121,7 +121,7 @@
     </android.support.design.widget.TextInputLayout>
 
     <Button
-        android:id="@+id/btnNext"
+        android:id="@+id/btnComplete"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -146,7 +146,7 @@
         android:text="@string/on_create_acc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnNext" />
+        app:layout_constraintTop_toBottomOf="@+id/btnComplete" />
 
     <TextView
         android:id="@+id/tvAnd"
