--- a/app/src/main/res/layout/activity_occupation_area_case.xml
+++ b/app/src/main/res/layout/activity_occupation_area_case.xml
@@ -44,10 +44,10 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnNext" />
+            app:layout_constraintTop_toBottomOf="@+id/btnComplete" />
 
         <Button
-            android:id="@+id/btnNext"
+            android:id="@+id/btnComplete"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -61,7 +61,7 @@
             app:layout_constraintTop_toBottomOf="@+id/spOccupationArea" />
 
         <TextView
-            android:id="@+id/tvUpload"
+            android:id="@+id/tvDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -73,7 +73,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tvUploadMsg"
+            android:id="@+id/tvDecriptionMsg"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -82,7 +82,7 @@
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvUpload" />
+            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
 
 
         <com.jaredrummler.materialspinner.MaterialSpinner
@@ -94,7 +94,7 @@
             android:layout_marginEnd="32dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvUploadMsg"
+            app:layout_constraintTop_toBottomOf="@+id/tvDecriptionMsg"
             app:ms_arrow_tint="@color/colorAccent"
             app:ms_background_color="@color/colorGrayLight" />
 
