--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -145,7 +145,7 @@
                     android:id="@+id/tvQuestionsMsg"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/questions_taken"
+                    android:text="@string/cases_taken"
                     android:textAllCaps="true"
                     android:textColor="@color/white"
                     android:textSize="13sp" />
