--- a/app/src/main/res/layout/activity_description_case.xml
+++ b/app/src/main/res/layout/activity_description_case.xml
@@ -72,7 +72,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tilDescription" />
 
         <TextView
-            android:id="@+id/tvDescription"
+            android:id="@+id/tvComment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -93,7 +93,7 @@
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
+            app:layout_constraintTop_toBottomOf="@+id/tvComment" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/tilDescription"
