--- a/app/src/main/res/layout/activity_file_case.xml
+++ b/app/src/main/res/layout/activity_file_case.xml
@@ -90,7 +90,7 @@
             app:layout_constraintTop_toBottomOf="@+id/btnPdf" />
 
         <TextView
-            android:id="@+id/tvDescription"
+            android:id="@+id/tvComment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -111,7 +111,7 @@
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
+            app:layout_constraintTop_toBottomOf="@+id/tvComment" />
 
         <View
             android:id="@+id/divider2"
