--- a/app/src/main/res/layout/cases_layout.xml
+++ b/app/src/main/res/layout/cases_layout.xml
@@ -42,7 +42,7 @@
             android:text="Advogados: 0/3" />
 
         <TextView
-            android:id="@+id/tvDescription"
+            android:id="@+id/tvComment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
