--- a/app/src/main/res/layout/your_cases_layout.xml
+++ b/app/src/main/res/layout/your_cases_layout.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/tvDescription"
+            android:id="@+id/tvComment"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -63,7 +63,7 @@
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
+            app:layout_constraintTop_toBottomOf="@+id/tvComment" />
 
         <TextView
             android:id="@+id/tvPdf"
@@ -77,7 +77,7 @@
             android:textColor="@color/colorAccent"
             android:visibility="gone"
             app:layout_constraintStart_toEndOf="@+id/tvPicture"
-            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
+            app:layout_constraintTop_toBottomOf="@+id/tvComment" />
     </android.support.constraint.ConstraintLayout>
 
 </android.support.v7.widget.CardView>
